--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.8",
+    "autotyping": "^1.2.6",
     "express": "^4.18.1",
     "postcss-cli": "^10.0.0"
   }
